--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
       Office: (404) 555 - 4140
     </section>
   </footer>
-  <script src="lht_calendar.js" defer></script>
+  <script src="lht_events.js"></script>
+  <script src="lht_calendar.js"></script>
+
 </body>
 
 </html>
